--- a/xdcs-frontend/src/index.html
+++ b/xdcs-frontend/src/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en" class="theme-basic">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8"/>
   <title>XDCS</title>
-  <base href="/">
+  <base href="/"/>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
